config-kubernetes/gcp/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-producer
  name: deploy-producer
  namespace: usactar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-producer
  template:
    metadata:
      labels:
        app: deploy-producer
    spec:
      containers:

      - image: alexingguerra/consumer
        imagePullPolicy: Always
        name: producer
        ports:
          - containerPort: 5010
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-producer
  name: service-producer
  namespace: usactar
spec:
  type: LoadBalancer
  ports:
    - name: service-producer
      port: 5010
      protocol: TCP
  selector:
    app: deploy-producer
