config-kubernetes/gcp/ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: usactar
spec:
  ingressClassName: nginx
  rules:
  - host: 34.135.93.12.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicio-goapi
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go
  namespace: usactar
spec:
  ingressClassName: nginx
  rules:
  - host: 35.223.89.127.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy-producer
            port:
              number: 5010
